Use `newtxtext` package for Times font
Package `times` is apparently deprecated now?
see: https://ctan.org/pkg/times

--- a/mla.dtx
+++ b/mla.dtx
@@ -253,7 +253,7 @@
 \RequirePackage{fullpage}
 \RequirePackage{indentfirst}
 \RequirePackage{ragged2e}
-\RequirePackage{times}
+\RequirePackage{newtxtext}
 \RequirePackage{titlesec}
 \RequirePackage{xstring}
 %    \end{macrocode}
@@ -291,7 +291,7 @@
 % \subsection{Font}
 % \label{sec:font}
 %
-% The \Dpkg{times} package was already loaded in
+% The \Dpkg{newtxtext} package was already loaded in
 % section~\ref{sec:loading_packages},
 % and the font was set to 12pt when loading the \Dcls{article} class
 % in section~\ref{sec:initial_code}.
