--- a/mla.dtx
+++ b/mla.dtx
@@ -97,6 +97,7 @@
                       long=Comprehensive \TeX\ Archive Network}
 \DeclareAcronym{OWL}{short=OWL,long=Purdue Online Writing Lab}
 \DeclareAcronym{PDF}{short=PDF,long=Portable Document Format}
+\DeclareAcronym{LPPL}{short=LPPL,long=\LaTeX\ Project Public License}
 
 %% For a few different things
 %%\usepackage{semantic-markup}
@@ -169,6 +170,18 @@
 % almost perfectly adherent to the
 % \ac{MLA} style guide\footfullcite{mlahb}.
 % \end{abstract}
+%
+% \section*{Licensing}
+% \label{sec:licensing}
+%
+% The files contained in this package
+% may be distributed and/or modified under the
+% conditions of the \ac{LPPL}, either
+% version 1.3 of this license or any later version.
+% The latest version of this license is in
+% \url{https://www.latex-project.org/lppl/lppl-1-3c/},
+% and version 1.3c or later is part of all distributions
+% of \LaTeX\ version 2008/05/04 or later.
 %
 % \tableofcontents
 %
