Update docs for version 0.3

--- a/mla.dtx
+++ b/mla.dtx
@@ -27,7 +27,7 @@
 %<mla>\NeedsTeXFormat{LaTeX2e}
 %<mla>\ProvidesClass{mla}
 %<*mla>
-    [2019/05/02 v0.2 MLA Paper Class]
+    [2019/05/07 v0.3 MLA Paper Class]
 %</mla>
 
 %<*driver>
@@ -151,7 +151,7 @@
 % \title{The \Dcls{mla} class\thanks{This document corresponds to
 %        \Dcls{mla}~\fileversion, dated \filedate.}}
 % \author{Seth Price \\ \href{mailto:\myemail}{\texttt{\myemail}}}
-% \date{\filedate}
+% \date{\today}
 %
 % \maketitle
 %
