Fix two-line `\changes` to compile right
I forgot the extra `%`, oopsies

--- a/mla.dtx
+++ b/mla.dtx
@@ -236,7 +236,7 @@
 % is the citation format used by \Dpkg{biblatex}.
 %
 % \changes{v0.3}{2019/05/06}{Improved options parsing to avoid
-	contradiction and undefined behavior}
+%	contradiction and undefined behavior}
 %    \begin{macrocode}
 \DeclareOption{mla7}{\def\@optMlaSeven}
 \DeclareOption{mla8}{\def\@optMlaEight}
@@ -281,7 +281,7 @@
 % \url{https://www.ctan.org/}.}:
 %
 % \changes{v0.3}{2019/05/07}{Replaced obsolete \Dpkg{times} package
-	with \Dpkg{newtxtext}}
+%	with \Dpkg{newtxtext}}
 %    \begin{macrocode}
 \RequirePackage{enotez}
 \RequirePackage{fancyhdr}
@@ -499,7 +499,7 @@
 % (Note the use of \cs{mladate}; see section~\ref{sec:initial_code}.)
 %
 % \changes{v0.2}{2019/05/02}{Changed date format to
-	\term{day month year}}
+%	\term{day month year}}
 %    \begin{macrocode}
 \newcommand{\makemlaheader}{%
     \begin{noindent}
@@ -578,7 +578,7 @@
 % for this purpose.
 %
 % \changes{v0.2}{2019/04/28}{Countered unexplained vertical space
-	after environment}
+%	after environment}
 %    \begin{macrocode}
 \renewenvironment{blockquote}{%
     \list{}{\leftmargin 0.5in}
@@ -621,7 +621,7 @@
 %
 % \changes{v0.2}{2019/04/28}{Added environment}
 % \changes{v0.2}{2019/04/28}{Countered unexplained vertical space
-	after heading}
+%	after heading}
 %    \begin{macrocode}
 \newenvironment{notes}{%
     \begin{noindent}
@@ -658,7 +658,7 @@
 % documentation for instructions.}.
 %
 % \changes{v0.2}{2019/04/28}{Countered unexplained vertical space
-	after heading}
+%	after heading}
 %    \begin{macrocode}
 \newenvironment{workscited}{%
     \begin{noindent}
