Change line spacing to allow 24 lines per page
The docs even said the class prints out 24,
but for some reason I didn't make sure it did.
Originally, LaTeX printed 22 but I mis-counted it as 23,
and assumed one more line meant 24.  I was wrong.
Now it's actually a consistent 24 lines, yeesh.

--- a/mla.dtx
+++ b/mla.dtx
@@ -351,8 +351,10 @@
 % and likely following versions as well.} produces 24.
 % To compensate, line spacing is set to \emph{just enough}:
 %
+% \changes{v0.4}{2019/05/08}{Changed \cs{linespacing} to
+%	prints 24 lines per page}
 %    \begin{macrocode}
-\linespread{1.99}
+\linespread{1.905}
 %    \end{macrocode}
 %
 % Though not explicitly denounced in the \citetitle{mlahb},
